# asm_vm

./: .gitignore  CMakeLists.txt  Makefile
asm/: asm.c  constants.h  encoder.c  encoder.h  f.c  f.h  in  labels_table.c  labels_table.h  parser.c  parser.h
data/: in
tests/: check.cpp
vm/: constants.h  fetcher.c  fetcher.h  instructions.c  instructions.h  process.c  process.h  vm.c
